USAGOV-382-Mobile-Navigation: fix language toggle position on mobile

--- a/web/themes/custom/usagov/sass/mobile-menu.scss
+++ b/web/themes/custom/usagov/sass/mobile-menu.scss
@@ -100,7 +100,7 @@ ul.navigation__items{
   cursor: pointer;
 }
 #block-languageswitcher{
-  z-index: 1;
+  position: relative;
 }
 
 @media (min-width: 64em){
